Adaptions for Java 9 and minor corrections